--- a/utils/check_cgpoints.ipynb
+++ b/utils/check_cgpoints.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -21,32 +21,32 @@
     "import cv2\n",
     "import json\n",
     "\n",
-    "# ファイルパス\n",
-    "annotation_path = '/home/yukik/Work/Tohoku/Datasets/CMMD_0601_cleaned/D1-0033/R_MLO/AnnotationFile.Json'\n",
-    "image_path = '/home/yukik/Work/Tohoku/Datasets/CMMD_0601_cleaned/D1-0033/R_MLO/image.png'\n",
+    "# File paths\n",
+    "annotation_path = 'Datasets/CMMD_0601_cleaned/D1-0033/R_MLO/AnnotationFile.Json'\n",
+    "image_path = 'Datasets/CMMD_0601_cleaned/D1-0033/R_MLO/image.png'\n",
     "\n",
-    "# アノテーションデータの読み込み\n",
+    "# Load annotation data\n",
     "with open(annotation_path, 'r') as f:\n",
     "    annotations = json.load(f)\n",
     "\n",
-    "# 全てのcgPointsを取得\n",
-    "cg_points = annotations[0]['cgPoints']  # 仮定: annotations[0]に関心のあるデータが含まれている\n",
+    "# Retrieve all cgPoints\n",
+    "cg_points = annotations[0]['cgPoints']  # Assumption: annotations[0] contains the relevant data\n",
     "\n",
-    "# 画像の読み込み\n",
+    "# Load the image\n",
     "img = cv2.imread(image_path, cv2.IMREAD_GRAYSCALE)\n",
     "img_rgb = cv2.cvtColor(img, cv2.COLOR_GRAY2RGB)\n",
     "\n",
-    "# 描画の準備\n",
+    "# Prepare for drawing\n",
     "fig, ax = plt.subplots()\n",
     "ax.imshow(img_rgb, cmap='gray')\n",
     "\n",
-    "# 座標点をプロット\n",
+    "# Plot coordinate points\n",
     "for point in cg_points:\n",
-    "    ax.plot(point['x'], point['y'], 'ro')  # 'ro' は赤色の丸を意味する\n",
+    "    ax.plot(point['x'], point['y'], 'ro')  # 'ro' means red circle\n",
     "\n",
-    "# 表示\n",
-    "plt.axis('off')  # 軸を非表示に\n",
-    "plt.show()"
+    "# Display\n",
+    "plt.axis('off')  # Hide axes\n",
+    "plt.show()\n"
    ]
   },
   {
